--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
     <div id="emoji">😂</div>
 
-    <script src="app.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
