html css and js updated

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1 class="heading">Pov - girls's mood swings</h1>
+   <h2 class="h2">hover me please</h2>
     <div id="emoji">😂</div>
 
     <script src="script.js"></script>
